fixing site name alignment and underscore

--- a/src/app/home/homepage/homepage.component.scss
+++ b/src/app/home/homepage/homepage.component.scss
@@ -42,14 +42,26 @@
   margin-bottom: 3rem;
 }
 
+.logo {
+  margin-right: 2rem;
+}
+
 .link {
   color: inherit;
   font: inherit;
   font-size: 5rem;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+
+  .sitename{
+    border-bottom: transparent 3px solid;
+  }
 
   &:hover {
-    border-bottom: $text-color 3px solid;
+    .sitename {
+      border-bottom: $text-color 3px solid;
+    }
   }
 
   @include respond(phone) {
